# QueenSat

./: CMakeLists.txt
QueenSat/: CMakeLists.txt  QueenSat.cpp
